# blog-v2

./: .gitignore  Makefile  README.md
.github/: release-drafter.yml
.github/ISSUE_TEMPLATE/: bug.md  docs.md  feature.md  task.md
.github/PULL_REQUEST_TEMPLATE/: chore.md  docs.md  feat.md  test.md
.github/instructions/: copilot-review.instructions.md
.github/workflows/: cd.yml  ci.yml  hackernews-pipeline.yml  release-drafter.yml
contracts/openapi/: anime.yaml  auth.yaml  comment.yaml  hackernews.yaml  misc.yaml  post.yaml  visitor.yaml
contracts/openapi/specs/: anime.yaml  auth.yaml  comment.yaml  hackernews.yaml  misc.yaml  post.yaml  visitor.yaml
docs/adr/: 0000-template.md
infra/db/migrations/: V0001__create_tables.sql  V0002__add_indexes.sql  V0003__create_post_contents_table.sql  V0004__add_unique_sha256_to_assets.sql  V0005__rename_posts_body_to_image.sql  V0006__create_hackernews_likes_table.sql
infra/docker/: .env.example  compose.dev.yml  compose.local.yml  compose.prod.yml
infra/docker/observability/alloy/: config.alloy  config.prod.alloy
infra/terraform/: .gitignore  README.md  data.tf  outputs.tf  provider.tf  variables.tf
services/auth/: Cargo.toml  Dockerfile
services/auth/src/: main.rs
services/auth/src/config/: mod.rs
services/auth/src/handlers/: mod.rs
services/auth/src/providers/: apple.rs  github.rs  google.rs  kakao.rs  line.rs  mod.rs
services/auth/src/routes/: mod.rs
services/auth/src/services/: mod.rs
services/auth/src/stores/: postgres.rs  redis.rs
services/auth/src/types/: mod.rs
services/go/: .air.toml  Dockerfile  go.mod  go.sum  main.go
services/go/internal/r2/: client.go
services/go/prompts/: summary.md  translate-ja.md  translate-ko.md  translate-title-ko.md
services/haskell/: Dockerfile  blog-haskell-api.cabal
services/haskell/src/: Main.hs
services/rust/: Cargo.toml  Dockerfile
services/rust/src/: main.rs
services/rust/src/auth/: mod.rs
services/rust/src/config/: mod.rs
services/rust/src/handlers/: hackernews.rs  import.rs  mod.rs  posts.rs  sync.rs  translate.rs  uploads.rs
services/rust/src/repositories/: posts.rs
services/rust/src/routes/: hackernews.rs  import.rs  mod.rs  posts.rs  sync.rs  uploads.rs
services/rust/src/stores/: assets.rs  contents.rs  hackernews_likes.rs  jobs.rs  mod.rs  postgres.rs  posts.rs
services/rust/src/types/: assets.rs  auth.rs  contents.rs  error.rs  mod.rs  posts.rs
(+68 files in other folders)
