[package]
name = "blog-auth-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono"] }
redis = { version = "1.0.3", features = ["tokio-comp"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
reqwest = { version = "0.13.2", features = ["json", "form"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
rand = "0.10.0"
sha2 = "0.10"
hex = "0.4.3"
dotenvy = "0.15"
thiserror = "2.0.18"
url = "2"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }