cabal-version: 3.0
name:          blog-haskell-api
version:       0.1.0
build-type:    Simple

executable blog-haskell-api
  main-is:       Main.hs
  hs-source-dirs: src
  build-depends:
    base >=4.17 && <5,
    bytestring,
    warp,
    wai,
    http-types
  default-language: Haskell2010
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N