[package]
name = "blog-rust-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
sha2 = "0.11.0"
hex = "0.4.3"
dotenvy = "0.15"
thiserror = "2.0.18"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
aws-sdk-s3 = "1.127.0"
aws-config = { version = "1", features = ["behavior-version-latest"] }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
subtle = "2"
futures = "0.3"
redis = { version = "1.1.0", features = ["tokio-comp"] }